add font and mb for section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!-- -----title------- -->
         <h2 class="text-center my-3">Our Menu</h2>
         <!-- -----title------- -->
-        <div class="row g-3 justify-content-between">
+        <div class="row g-3 justify-content-between mb-4">
             <div class="col-12 col-sm-6 col-md-4">
                 <div class="card card-color" id="Chicken">
                     <div class="card-body">
